--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,5 +2,5 @@
 <form class="" action="index.html" method="post">
   <input type="text" name="post_title" value="">
   <input type="text" name="post_title" value="">
-  <input type="submit" name="" value="">
+  <input type="submit" value="submit">
 </form>
