--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Post Form</h2>
 <form class="" action="index.html" method="post">
-  <input type="text" name="post_title" value="">
-  <input type="text" name="post_description" value="">
+  <input type="text" name="post_title">
+  <input type="text" name="post_description">
   <input type="submit" value="Submit Post">
 </form>
