automatically backed up by learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <h2>Post Form</h2>
-<form class="" action="index.html" method="post">
+<form class="" action="new" method="post">
   <input type="text" name="post_title">
   <input type="text" name="post_description">
   <input type="submit" value="Submit Post">
