automatically backed up by learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,3 +4,5 @@
   <textarea id="post_description" name="post[description]">
   <input type="submit" value="Submit Post">
 </form>
+
+<%= params.inspect %>
