--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
 <h2>Post Form</h2>
 <form class="" action="new" method="post">
   <input type="text" id="post_title" name="post[title]">
-  <textarea id="post_description" name="post[description]">
+  <textarea id="post_description" name="post[description]"></textarea><br>
   <input type="submit" value="Submit Post">
 </form>
 
