automatically backed up by learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,8 @@
 <h2>Post Form</h2>
 <form class="" action="new" method="post">
   <input type="text" id="post_title" name="post[title]">
+
+  <label>Post description:</label><br>
   <textarea id="post_description" name="post[description]"></textarea><br>
   <input type="submit" value="Submit Post">
 </form>
