--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,7 @@
 <h2>Post Form</h2>
 <form class="" action="new" method="post">
+
+  <label>Post title:</label><br>
   <input type="text" id="post_title" name="post[title]">
 
   <label>Post description:</label><br>
