--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <h2>Post Form</h2>
-<form>
+<form action="<%= posts_path %>" method="POST">
 
   <label>Post title:</label><br>
   <input type="text" id="post_title" name="post[title]">
