--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,9 @@
 <h2>Post Form</h2>
+
 <form action="<%= posts_path %>" method="POST">
 
   <label>Post title:</label><br>
-  <input type="text" id="post_title" name="post[title]">
+  <input type="text" id="post_title" name="post[title]"><br>
 
   <label>Post description:</label><br>
   <textarea id="post_description" name="post[description]"></textarea><br>
