automatically backed up by learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,6 @@
 <h2>Post Form</h2>
 
+<%= form_tag posts_path do %>
 <form action="<%= posts_path %>" method="POST">
 
   <label>Post title:</label><br>
