--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
 <h2>Post Form</h2>
 
 <%= form_tag posts_path do %>
-<form action="<%= posts_path %>" method="POST">
+<!-- <form action="<%= posts_path %>" method="POST"> -->
 
   <label>Post title:</label><br>
   <input type="text" id="post_title" name="post[title]"><br>
