--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -13,7 +13,8 @@
   <!-- <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>"> -->
 
   <input type="submit" value="Submit Post">
-  <% end %>
-</form>
+
+<% end %>
+<!-- </form> -->
 
 <%= params.inspect %>
