automatically backed up by learn

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,7 +4,8 @@
 <!-- <form action="<%= posts_path %>" method="POST"> -->
 
   <label>Post title:</label><br>
-  <input type="text" id="post_title" name="post[title]"><br>
+  <%= text_field_tag :'post[title]' %><br>
+  <!-- <input type="text" id="post_title" name="post[title]"><br> -->
 
   <label>Post description:</label><br>
   <textarea id="post_description" name="post[description]"></textarea><br>
