--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -8,7 +8,7 @@
   <!-- <input type="text" id="post_title" name="post[title]"><br> -->
 
   <label>Post description:</label><br>
-  <%= text_field_tag :'post[title]' %><br>
+  <%= text_field_tag :'post[description]' %><br>
   <textarea id="post_description" name="post[description]"></textarea><br>
 
   <!-- <%= hidden_field_tag :authenticity_token, form_authenticity_token %> -->
